--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -1317,7 +1317,7 @@
         "en":"Attack a target with your weapon, dealing massive damage.",
         "fr":"Attaque la cible avec l'arme, lui infligeant des dégâts massifs",
         "es":"",
-        "ch":"",
+        "ch":"用武器攻擊單一目標，造成大量傷害.",
         "kr":"",
         "ru":"Атакует цель своим оружием, нанося огромный урон",
         "tr":"",
@@ -1335,7 +1335,7 @@
         "en":"Inflicts {0}% more damage and an additional {1} Skill damage.",
         "fr":"Inflige {0}% de dégâts supplémentaires et {1} dégâts de compétences additionnels.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0}% 以上的傷害以及額外 {1} 的技能傷害.",
         "kr":"",
         "ru":"Наносит на {0}% больше урона и дополнительный {1} урон навыка",
         "tr":"",
@@ -1353,7 +1353,7 @@
         "en":"Air Slash",
         "fr":"Tranche",
         "es":"",
-        "ch":"",
+        "ch":"踏空斬",
         "kr":"",
         "ru":"Воздушный Разрез",
         "tr":"",
@@ -1371,7 +1371,7 @@
         "en":"Approach a target instantly to deliver a devastating strike.",
         "fr":"Approche une cible instantanément pour lancer une frappe dévastatrice.",
         "es":"",
-        "ch":"",
+        "ch":"瞬間接近目標並對其造成致命打擊.",
         "kr":"",
         "ru":"Мнгновенно сближается с целью, и наносит сокрушительный удар.",
         "tr":"",
@@ -1389,7 +1389,7 @@
         "en":"Inflicts {0}% more damage and an additional {1} Skill damage. Range: {2} yds.",
         "fr":"Inflige {0}% de dégâts supplémentaires et {1} dégâts de compétences additionnels. Portée : {2} mètres.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0}% 以上的傷害以及額外 {1} 的技能傷害. 射程: {2} 米.",
         "kr":"",
         "ru":"Наносит на {0}% больше урона и дополнительный {1} урон навыка. Расстояние: {2} ярдов.",
         "tr":"",
@@ -1407,7 +1407,7 @@
         "en":"Tenacity",
         "fr":"Tenacité",
         "es":"",
-        "ch":"",
+        "ch":"强韌",
         "kr":"",
         "ru":"Упорство",
         "tr":"",
@@ -1425,7 +1425,7 @@
         "en":"Increases Warrior’s max HP, for better survivability against monsters.",
         "fr":"Augmente les PV maximum du Guerrier.",
         "es":"",
-        "ch":"",
+        "ch":"增加戰士的最大生命值上限, 讓他擁有更强的生存力來對抗魔物.",
         "kr":"",
         "ru":"Увеличивает максимальный HP Воина, для лучшей живучести против монстров.",
         "tr":"",
@@ -1443,7 +1443,7 @@
         "en":"Increases Warrior's base HP by {0}%.",
         "fr":"Aumente les PV de base de {0}%.",
         "es":"",
-        "ch":"",
+        "ch":"增加戰士基礎生命值 {0}%.",
         "kr":"",
         "ru":"Увеличивает базовый HP воина на {0}%",
         "tr":"",
@@ -1461,7 +1461,7 @@
         "en":"Pitch",
         "fr":"Rafale",
         "es":"",
-        "ch":"",
+        "ch":"蓄勢斬",
         "kr":"",
         "ru":"Подача",
         "tr":"",
@@ -1479,7 +1479,7 @@
         "en":"Strikes target with a heavy ranged attack.",
         "fr":"Frappe la cible avec une puissante attaque à distance.",
         "es":"",
-        "ch":"",
+        "ch":"用厚重的遠距離攻擊來突襲目標.",
         "kr":"",
         "ru":"Поразите цель мощной атакой дальнего боя.",
         "tr":"",
@@ -1497,7 +1497,7 @@
         "en":"Each stacked attack deals {0}% damage",
         "fr":"Chaque attaque cumulée inflige {0}% de dégâts.",
         "es":"",
-        "ch":"",
+        "ch":"每一層蓄勢攻擊造成 {0}% 的傷害.",
         "kr":"",
         "ru":"Каждая накопленная атака наносит {0}% урона",
         "tr":"",
@@ -1515,7 +1515,7 @@
         "en":"Bash",
         "fr":"Entaille",
         "es":"",
-        "ch":"",
+        "ch":"重擊",
         "kr":"",
         "ru":"Удар",
         "tr":"",
@@ -1533,7 +1533,7 @@
         "en":"Deals damage to the target and slows it down.",
         "fr":"Inflige des dégâts à la cible et la ralentit.",
         "es":"",
-        "ch":"",
+        "ch":"對目標造成傷害並減速.",
         "kr":"",
         "ru":"Наносит урон цели и замедляет ее.",
         "tr":"",
@@ -1551,7 +1551,7 @@
         "en":"Inflicts {0} Skill damage. Lowers target's SPD by {1}% for {2} sec.",
         "fr":"Inflige {0} dégâts de compétence. Baisse la VIT de la cible de {1}% durant {2} secondes.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0} 的技能傷害. 使目標降低移動速度 {1}%, 持續 {2}秒.",
         "kr":"",
         "ru":"Наносящий {0} урон. Снижает SPD цели на {1}% в течение {2} секунд.",
         "tr":"",
@@ -1569,7 +1569,7 @@
         "en":"War Cry",
         "fr":"Cri de Guerre",
         "es":"",
-        "ch":"",
+        "ch":"戰吼",
         "kr":"",
         "ru":"Боевой клич",
         "tr":"",
@@ -1587,7 +1587,7 @@
         "en":"Taunts nearby enemies and lowers their Defense. Causes high threat against certain monsters. Suitable for tanking.",
         "fr":"Provoque les ennemis proches et réduit leur défense. Provoque une agression sur les monstres dans la zone d'effet.",
         "es":"",
-        "ch":"",
+        "ch":"嘲諷附近的敵人並降低其防禦力. 對一些特定的魔物造成巨大威脅.",
         "kr":"",
         "ru":"Издевается над ближайшими врагами и снижает их защиту. Вызывает агрессию у монстров в области действия. Предназначен для танкования.",
         "tr":"",
@@ -1605,7 +1605,7 @@
         "en":"Causes {0} Skill damage to nearby enemies. Lowers enemies DMG RD by {1}%. Lasts {2} sec.",
         "fr":"Inflige {0} dégâts de compétence aux ennemis proches. Réduit la résistance aux dégâts de l'ennemi de {1}%. Dure {2} secondes.",
         "es":"",
-        "ch":"",
+        "ch":"對周圍敵人造成 {0} 的技能傷害. 降低敵人傷害減免 {1}%. 持續 {2} 秒.",
         "kr":"",
         "ru":"Наносит урон навыком {0} ближайшим врагам. Снижает уровень сопротивления урону врагов на {1}%. Длится {2} сек.",
         "tr":"",
@@ -1623,7 +1623,7 @@
         "en":"Surge",
         "fr":"Lame Verticale",
         "es":"",
-        "ch":"",
+        "ch":"波動斬",
         "kr":"",
         "ru":"Волна",
         "tr":"",
@@ -1641,7 +1641,7 @@
         "en":"Attacks enemies in a line in front of you.",
         "fr":"Attaque les ennemis dans une ligne devant vous.",
         "es":"",
-        "ch":"",
+        "ch":"對角色面前同一直綫上的敵人造成傷害.",
         "kr":"",
         "ru":"Атакует врагов в линию перед вами.",
         "tr":"",
@@ -1659,7 +1659,7 @@
         "en":"Inflicts {0}% more damage and an additional {1} Skill damage",
         "fr":"Inflige {0}% de dégâts supplémentaires et {1} dégâts de compétence additionnels.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0}% 以上的傷害以及額外 {1} 的技能傷害.",
         "kr":"",
         "ru":"Наносит {0}% больше урона и дополнительный {1} Урон навыка",
         "tr":"",
@@ -1677,7 +1677,7 @@
         "en":"Block",
         "fr":"Parade",
         "es":"",
-        "ch":"",
+        "ch":"格擋",
         "kr":"",
         "ru":"Блок",
         "tr":"",
@@ -1695,7 +1695,7 @@
         "en":"Warrior takes less damage from the next couple attacks.",
         "fr":"Le Guerrier subit moins de dégâts lors des deux prochaines attaques.",
         "es":"",
-        "ch":"",
+        "ch":"戰士在接下來的幾次攻擊中受到更少的傷害.",
         "kr":"",
         "ru":"Воин получает меньше урона от следующей пары атак.",
         "tr":"",
@@ -1713,7 +1713,7 @@
         "en":"Increases DMG RD by {0}%. Character blocks 2 incoming attacks within 5 sec.",
         "fr":"Augmente la résistance aux dégâts de {0}%. Le personnage bloque 2 attaques entrantes dans les 5 secondes.",
         "es":"",
-        "ch":"",
+        "ch":"增加傷害減免 {0}%. 在5秒内，角色可以抵擋2次攻擊.",
         "kr":"",
         "ru":"Увеличивает сопративление урону на {0}%. Персонаж блокирует 2 входящие атаки в течение 5 секунд.",
         "tr":"",
@@ -1731,7 +1731,7 @@
         "en":"Crit Enhance",
         "fr":"Augmentation Critique",
         "es":"",
-        "ch":"",
+        "ch":"暴擊强化",
         "kr":"",
         "ru":"Усиление Крита",
         "tr":"",
@@ -1749,7 +1749,7 @@
         "en":"Increases the amount of Crit damage dealt.",
         "fr":"Augmente la quantité de dégâts critiques infligés.",
         "es":"",
-        "ch":"",
+        "ch":"增加造成的暴擊傷害量.",
         "kr":"",
         "ru":"Увеличивает количество наносимого критического урона.",
         "tr":"",
@@ -1767,7 +1767,7 @@
         "en":"Increases a Warrior's Common Attack Crit Damage by {0}%",
         "fr":"Augmente les dégâts d'attaque critique globaux du guerrier de {0}%.",
         "es":"",
-        "ch":"",
+        "ch":"增加戰士普通攻擊的暴擊傷害 {0}%.",
         "kr":"",
         "ru":"Увеличивает общий критический урон атаки Воина на {0}%",
         "tr":"",
@@ -1785,7 +1785,7 @@
         "en":"Crit Slash",
         "fr":"Lame Critique",
         "es":"",
-        "ch":"",
+        "ch":"致命打擊",
         "kr":"",
         "ru":"Критический порез",
         "tr":"",
@@ -1803,7 +1803,7 @@
         "en":"Increases the Crit Chance of your next common attack.",
         "fr":"Augmente les chances de critique de votre prochaine attaque commune.",
         "es":"",
-        "ch":"",
+        "ch":"增加下一次普通攻擊的暴擊率.",
         "kr":"",
         "ru":"Увеличивает шанс крита вашей следующей общей атаки",
         "tr":"",
@@ -1821,7 +1821,7 @@
         "en":"Increases Crit Chance and Hit Chance by {0}% for next 3 common attacks. Lasts up to {1} sec.",
         "fr":"Augmente la chance de critique et la chance de toucher de {0}% pour les 3 prochaines attaques communes. Dure jusqu'à {1} s.",
         "es":"",
-        "ch":"",
+        "ch":"增加之後三次普通攻擊的暴擊率和命中率 {0}%. 持續 {1} 秒.",
         "kr":"",
         "ru":"Увеличивает шанс крита и шанс попадания на {0}% для следующих 3 обычных атак. Длится до {1} сек.",
         "tr":"",
@@ -1839,7 +1839,7 @@
         "en":"Rage",
         "fr":"Fureur",
         "es":"",
-        "ch":"",
+        "ch":"暴怒",
         "kr":"",
         "ru":"Ярость",
         "tr":"",
@@ -1857,7 +1857,7 @@
         "en":"Activates a Warrior’s rage.",
         "fr":"Active la fureur du Guerrier.",
         "es":"",
-        "ch":"",
+        "ch":"釋放戰士的怒火",
         "kr":"",
         "ru":"Активизирует ярость воина.",
         "tr":"",
@@ -1875,7 +1875,7 @@
         "en":"Cooldown: {0} sec. Greatly enhances combat efficiency for {1} sec. Increases SPD by 30% and ATK SPD by 100%",
         "fr":"Temps de recharge: {0} secondes. Augmente la vitesse de 30% et la vitesse d'attaque de 100%. Dure {1} secondes.",
         "es":"",
-        "ch":"",
+        "ch":"冷卻時間: {0} 秒. 極大增强戰鬥能力 {1} 秒. 增加移動速度30%和攻擊速度100%.",
         "kr":"",
         "ru":"Перезарядка: {0} секунд. Значительно повышает боевую эффективность на {1} сек. увеличивает скорость на 30% и скорость атаки на 100%",
         "tr":"",
@@ -1893,7 +1893,7 @@
         "en":"Terminate",
         "fr":"Frappe Mortelle",
         "es":"",
-        "ch":"",
+        "ch":"終結一擊",
         "kr":"",
         "ru":"Уничтожение",
         "tr":"",
@@ -1911,7 +1911,7 @@
         "en":"An ultimate strike that deals a high amount of damage to one target.",
         "fr":"Une frappe ultime qui inflige une grande quantité de dégâts à une cible.",
         "es":"",
-        "ch":"",
+        "ch":"對單一目標施展最終一擊並造成大量傷害.",
         "kr":"",
         "ru":"Окончательный удар, который наносит большое количество урона одной цели.",
         "tr":"",
@@ -1929,7 +1929,7 @@
         "en":"Inflicts {0}% more DMG and an additional {1} Skill DMG",
         "fr":"Inflige {0}% de dégâts supplémentaires et {1} dégâts de compétences additionnels.",
         "es":"",
-        "ch":"",
+        "ch":"造成 {0}% 以上的傷害以及額外 {1} 的技能傷害.",
         "kr":"",
         "ru":"Наносит на {0}% больше DMG и дополнительный {1} навык DMG",
         "tr":"",
@@ -1947,7 +1947,7 @@
         "en":"Soul Gathering",
         "fr":"Collecte d'Âme",
         "es":"",
-        "ch":"",
+        "ch":"靈魂收集",
         "kr":"",
         "ru":"Сбор Душ",
         "tr":"",
@@ -1965,7 +1965,7 @@
         "en":"Activate Soul Gathering. Can see the target's soul while killing monsters. Looting soul provides EXP. And also picking up souls of the same color in a row will increase the EXP benefit.",
         "fr":"Active la Collecte d'Âme. Permets de voir l'âme de sa cible en tuant des monstres. Récupérer ces âmes procure de l'EXP. Récupérer les âmes de la même couleur de façon consécutive augmente la quantité d'EXP reçue.",
         "es":"",
-        "ch":"",
+        "ch":"激活靈魂收集. 在擊殺魔物后可以看到目標的靈魂. 掠奪靈魂可以提供經驗值. 連續拾取同種顏色的靈魂可以增加經驗值的收益.",
         "kr":"",
         "ru":"Активировация сбора душ. Может видеть душу цели после убийства монстров. Подобранная душа дает опыт. А также сбор душ одного цвета подряд увеличивает бонус опыта.",
         "tr":"",
@@ -1983,7 +1983,7 @@
         "en":"Can be used up to 3 times a day",
         "fr":"Peut-être utilisé jusqu'à 3 fois par jour",
         "es":"",
-        "ch":"",
+        "ch":"一天之内可以使用3次.",
         "kr":"",
         "ru":"Можно использовать до 3 раз в день",
         "tr":"",
@@ -2001,7 +2001,7 @@
         "en":"Time Left: {0} sec",
         "fr":"Temps Restant: {0} sec",
         "es":"",
-        "ch":"",
+	"ch":"剩餘時間:{0}秒",
         "kr":"",
         "ru":"Осталось Времени: {0} сек",
         "tr":"",
@@ -2019,7 +2019,7 @@
         "en":"Amount Left: {0}",
         "fr":"Âmes Restante: {0}",
         "es":"",
-        "ch":"",
+        "ch":"剩餘數量:{0}",
         "kr":"",
         "ru":"Осталось Душ: {0}",
         "tr":"",
@@ -2037,7 +2037,7 @@
         "en":"Trial of Stamina",
         "fr":"Épreuve d'endurance",
         "es":"",
-        "ch":"",
+        "ch":"耐力考驗",
         "kr":"",
         "ru":"Испытание на Выносливость",
         "tr":"",
@@ -2055,7 +2055,7 @@
         "en":"Increases defense.<br>Passive. Increases {0} defense.",
         "fr":"Augmente la défense.<br>Passif. Augmente {0} défense.",
         "es":"",
-        "ch":"",
+        "ch":"增加防禦力.<br>被動. 增加 {0} 防禦力.",
         "kr":"",
         "ru":"Повышает защиту.<br>Пассив. Добавляет {0} защиты.",
         "tr":"",
@@ -2073,7 +2073,7 @@
         "en":"Trial of Power",
         "fr":"Épreuve de puissance",
         "es":"",
-        "ch":"",
+        "ch":"力量考驗",
         "kr":"",
         "ru":"Испытание Силы",
         "tr":"",
@@ -2091,7 +2091,7 @@
         "en":"Increases Attack.<br>Passive. Increases {0} ATK.",
         "fr":"Augmente l'Attaque.<br>Passif. Augmente {0} ATQ",
         "es":"",
-        "ch":"",
+        "ch":"增加攻擊力.<br>被動. 增加 {0} 攻擊力.",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -2109,7 +2109,7 @@
         "en":"Trial of Health",
         "fr":"Épreuve de Vie",
         "es":"",
-        "ch":"",
+        "ch":"生命考驗",
         "kr":"",
         "ru":"Испытание Жизни",
         "tr":"",
@@ -2127,7 +2127,7 @@
         "en":"Increases Health.<br>Passive. Increases {0} HP.",
         "fr":"Augmente les PV Max.<br>Passif. Augmente {0} PV.",
         "es":"",
-        "ch":"",
+        "ch":"增加生命值.<br>被動. 增加 {0} 生命值.",
         "kr":"",
         "ru":"Увеличивает здоровье.<br>Пассивный. Добавляет {0} HP",
         "tr":"",
