--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2302,5 +2302,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.guild.name":{
+        "en":"Guild",
+        "fr":"Guilde",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
