--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2320,5 +2320,59 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+	"UI.windows.guild.grade.leader":{
+        "en":"Guild Leader",
+        "fr":"Chef",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+	"UI.windows.guild.grade.viceLeader":{
+        "en":"Vice Leader",
+        "fr":"Sous-Chef",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+	"UI.windows.guild.grade.officer":{
+        "en":"Officer",
+        "fr":"Officier",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
