--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -322,5 +322,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "tooltip.player-menu.guild-invite":{
+        "en":"Invite Guild",
+        "fr":"Inviter Guilde",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
