--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2608,5 +2608,59 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.guild.askLeave":{
+        "en":"Once you leave a guild, you will have to wait a day before joining a new one. Continue ?",
+        "fr":"Une fois la guilde quittée, vous devrez attendre un jour avant de pouvoir un joindre une nouvelle. Continuer ?",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.btn.donate":{
+        "en":"Dnat.",
+        "fr":"Don.",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.btn.upgrade":{
+        "en":"Upgr.",
+        "fr":"Augm.",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
