--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2680,5 +2680,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.guild.popup.donate.ressource.label":{
+        "en":"You are about to donate guild ressources to your guild.<br><b>One you have donated ressources to a guild, you can't take it back.</b>",
+        "fr":"Vous allez donner des ressources a votre guilde.<br><b>Une fois donnée à la guilde, il est impossible de le récupérer.</b>",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
