--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2627,6 +2627,42 @@
         "th":"",
         "id":""
     },
+    "UI.windows.guild.resume.myScore":{
+        "en":"My Guild Score",
+        "fr":"Mon Score",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.resume.ally":{
+        "en":"Ally",
+        "fr":"Alliés",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.guild.askLeave":{
         "en":"Once you leave a guild, you will have to wait a day before joining a new one. Continue ?",
         "fr":"Une fois la guilde quittée, vous devrez attendre un jour avant de pouvoir un joindre une nouvelle. Continuer ?",
@@ -2666,6 +2702,60 @@
     "UI.windows.guild.btn.upgrade":{
         "en":"Upgr.",
         "fr":"Augm.",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.btn.manage":{
+        "en":"Mng.",
+        "fr":"Gerer",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.btn.guildShop":{
+        "en":"Guild Shop",
+        "fr":"Magasin de Guilde",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.btn.manage":{
+        "en":"Mng.",
+        "fr":"Gerer",
         "es":"",
         "ch":"",
         "kr":"",
