--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4456,7 +4456,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tài Nguyên Bang Hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4492,7 +4492,7 @@
         "de":"Ominöser Brief",
         "jp":"",
         "pt":"",
-        "vi":"Thư nghi ngờ",
+        "vi":"Thư đáng ngờ",
         "ar":"",
         "it":"",
         "pl":"",
