--- a/Translation/general.json
+++ b/Translation/general.json
@@ -190,7 +190,7 @@
         "de":"Neu",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mới",
         "ar":"",
         "it":"",
         "pl":"",
@@ -244,7 +244,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lớp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -568,7 +568,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Danh sách",
         "ar":"",
         "it":"",
         "pl":"",
