--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1576,7 +1576,7 @@
         "de":"Bunker",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kho Ẩn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2242,7 +2242,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bản Đồ Thế Giới",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2260,7 +2260,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bản Đồ Thế Giới",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2278,7 +2278,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bản Đồ Hiện Tại",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2296,7 +2296,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thông Số Trang Bị của {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2314,7 +2314,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bang Hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2332,7 +2332,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trưởng Bang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2350,7 +2350,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phó Lãnh Đạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2368,7 +2368,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chỉ Huy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2386,7 +2386,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thành Viên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2404,7 +2404,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thành lập bang hội yêu cầu cấp độ 20 & 300,000 vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2422,7 +2422,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tên Bang Hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2440,7 +2440,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trưởng Bang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2458,7 +2458,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2476,7 +2476,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lớp Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2494,7 +2494,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sung Góp Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2512,7 +2512,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sung Góp Res.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2530,7 +2530,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp Độ Cửa Hàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2548,7 +2548,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mức Giàu Sang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2566,7 +2566,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tài Nguyên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2584,7 +2584,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lãnh Đạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2602,7 +2602,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thành Viên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2620,7 +2620,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Địa Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2638,7 +2638,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điểm Bang Hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2656,7 +2656,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đồng Minh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2674,7 +2674,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Một khi rời khỏi bang hội, bạn sẽ phải đợi một ngày trước khi gia nhập bang hội khác.Tiếp tục chứ ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2692,7 +2692,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"S.Góp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2710,7 +2710,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"N.Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2728,7 +2728,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Q.Lý",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2746,7 +2746,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cửa Hàng Bang Hội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2764,7 +2764,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Q.Lý",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2782,7 +2782,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn chuẩn bị sung góp vàng cho bang hội.<br><b>Một khi đã sung góp cho bang hội, bạn sẽ không thể lấy lại.</b>",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2800,7 +2800,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn chuẩn bị sung góp tài nguyên cho bang hội.<br><b>Một khi đã sung góp cho bang hội, bạn sẽ không thể lấy lại.</b>",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2818,7 +2818,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nâng cấp bang hội cần {0} vàng.<br>Tiếp tục chứ ?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2836,7 +2836,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nâng cấp bang hội cần {0} tài nguyên.<br>Tiếp tục chứ ?",
         "ar":"",
         "it":"",
         "pl":"",
